# Individual-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  script.gpi
common/: CMakeLists.txt  common.h  draw.cpp  draw.hpp  fun.hpp  fun2d.hpp  fun3d.hpp  fun6d.hpp  funCar.hpp  simulation.cpp  simulation.hpp
dependencies/: CMakeLists.txt
simulations/: CMakeLists.txt  amplitude.cpp  angle.cpp  angleFinder.cpp  cyclicFinder.cpp  trajectory.cpp  trajectory2d.cpp  trajectory3d.cpp  trajectory6d.cpp
source/: CMakeLists.txt  common.h  draw.cpp  draw.hpp  main.cpp  simulation.cpp  simulation.hpp
source/sims/: amplitude.cpp  sims.hpp  trajectory.cpp
